# numbat

./: .gitignore  BUILDING  CMakeLists.txt  CNAME  LICENSE  README.md  _config.yml  changelog.md  index.html  numbat.kdev4  numbat.xml  roadmap.md  test.nbt  test.sh
_posts/: 2014-08-01-site-under-development.markdown  2014-08-03-V0.1.markdown  2014-08-05-V0.1.1.markdown
cmake/Modules/: FindLLVM.cmake
doc/: analysis.md  formal grammar.md  formal grammar.txt  formal grammer.txt  language.overview.md
doc/language specification/: 1. Introduction.txt  3. Lexing Numbat.txt  4. Type system.txt
doc/specification/: 2.source.code.md  3. Lexing Numbat.txt  3.lexing.numbat.md  4.type.system.md  5.functions.md  6.memory.management.md
doc/stdlib/: io.md
include/: ast.hpp  builtinmodules.hpp  cast.hpp  context.hpp  core.hpp  file.hpp  forward.hpp  generator.hpp  lexer.hpp  main.hpp  module.hpp  numbat.hpp  parser.hpp  position.hpp  token.hpp  visitor.hpp
include/ast/: astallocate.hpp  astbase.hpp  astbody.hpp  astbranch.hpp  astcall.hpp  astcallable.hpp  astcallerror.hpp  astcallindex.hpp  astconcat.hpp  astconstant.hpp  astconstantint.hpp  asterror.hpp  astfunctionlist.hpp  astfunctionpointer.hpp  astgep.hpp  astidentifier.hpp  astmemcpy.hpp  astmodule.hpp  astnil.hpp  astnumbatinstr.hpp  astoperatorerror.hpp  astparamater.hpp  astrawdata.hpp  astreturn.hpp  aststructindex.hpp  astsubexp.hpp  asttuple.hpp  asttuplecall.hpp  asttype.hpp  astvariable.hpp  astwhileloop.hpp  call.hpp  context.hpp  flowcontrol.hpp  function.hpp  functiondecleration.hpp  literal.hpp  memory.hpp  meta.hpp  node.hpp  (+13 more)
include/ast/callable/: astcall.hpp  astcallable.hpp  astcallerror.hpp  astfunctionpointer.hpp
include/ast/constant/: astconstant.hpp  astconstantcstring.hpp  astconstantfpint.hpp  astconstantint.hpp
include/ast/control/: astbody.hpp  astbranch.hpp  astreturn.hpp  astwhileloop.hpp
include/ast/memory/: astallocate.hpp  astcallindex.hpp  astconcat.hpp  astgep.hpp  astmember.hpp  astmemcpy.hpp  astparamater.hpp  astredirect.hpp  aststructindex.hpp  astvariable.hpp  numbatvariable.hpp
include/ast/passes/: abstract.hpp  analysis.hpp  callgraph.hpp  execute.hpp  functionpurity.hpp  funcutil.hpp  identity.hpp  metatagswizzle.hpp  nir.hpp  operate.hpp  prunedead.hpp  reflectpass.hpp  resolve.hpp  returnpass.hpp  shallnot.hpp  stackmachine.hpp  typecastpass.hpp  typesafetypass.hpp  typeutil.hpp
include/ast/type/: astrawdata.hpp  astreinterpretcast.hpp  asttuple.hpp  asttype.hpp  numbatenumtype.hpp  numbatpointertype.hpp  numbatrawtype.hpp  numbattype.hpp
include/codegen/: genericPass.hpp  interpreter.hpp  llvm.hpp  passProcession.hpp  target.hpp  targetVisitor.hpp
include/codegen/analysis/: callGraph.hpp  functionComplexity.hpp
include/codegen/optimisation/: staticEvaluation.hpp
include/nir/: block.hpp  forward.hpp  function.hpp  instruction.hpp  module.hpp  parameter.hpp  scope.hpp  symbol.hpp  type.hpp  value.hpp
include/nir/inst/: add.hpp  alloc.hpp  bitwise.hpp  call.hpp  composite.hpp  constant.hpp  div.hpp  equal.hpp  functionPointer.hpp  get.hpp  jump.hpp  less.hpp  lessequal.hpp  memcpy.hpp  mul.hpp  neg.hpp  nequal.hpp  pickStructMember.hpp  ptradd.hpp  put.hpp  reinterpret.hpp  rem.hpp  ret.hpp  sub.hpp
include/nir/type/: array.hpp  functionType.hpp  importHandle.hpp  number.hpp  pointer.hpp  struct.hpp  tuple.hpp
include/parse/: handparser.hpp  numbatparser.hpp  parser.hpp  stack.hpp  tree.hpp
include/parse/tree/: base.hpp  braceinitaliser.hpp  call.hpp  error.hpp  function.hpp  identifier.hpp  ifelse.hpp  import.hpp  index.hpp  keyword.hpp  list.hpp  literal.hpp  loop.hpp  metaTags.hpp  operator.hpp  resolvescope.hpp  return.hpp  slice.hpp  struct.hpp  symbol.hpp  typemodifier.hpp  variable.hpp
include/stackmachine/: abstract.hpp  chunk.hpp  instruction.hpp  interpreter.hpp  printer.hpp  stackcontenttracker.hpp
include/utility/: alphanumeric.hpp  array.hpp  config.hpp  literals.hpp  literalstack.hpp  report.hpp  symbol.hpp  text.hpp  timer.hpp
libnbt/: core util.nbt  io.nbt  os.nbt  string.nbt
libnbt/core/: string.nbt
locallib/: math.nbt  module.txt  string.nbt
src/: ast.cpp  builtinmodules.cpp  cast.cpp  console.cpp  core.cpp  file.cpp  generator.cpp  lexer.cpp  main.cpp  module.cpp  numbat.cpp  numbatmain.cpp  parser.cpp  position.cpp
src/ast/: astbase.cpp  astbody.cpp  astcall.cpp  astnumbatinstr.cpp  asttuple.cpp  asttuplecall.cpp  call.cpp  context.cpp  flowcontrol.cpp  function.cpp  functiondecleration.cpp  literal.cpp  memory.cpp  meta.cpp  node.cpp  numbatpointertype.cpp  numbatrawtype.cpp  numbatscope.cpp  numbattype.cpp  operatordecleration.cpp  sequence.cpp  type.cpp  typecast.cpp  variable.cpp
src/ast/passes/: abstract.cpp  analysis.cpp  callgraph.cpp  execute.cpp  functionpurity.cpp  funcutil.cpp  identity.cpp  metatagswizzle.cpp  nir.cpp  prunedead.cpp  reflectpass.cpp  resolve.cpp  returnpass.cpp  stackmachinepass.cpp  typecastpass.cpp  typesafetypass.cpp  typeutil.cpp
src/codegen/: interpreter.cpp  llvm.cpp  target.cpp
src/nir/: block.cpp  function.cpp  instruction.cpp  module.cpp  scope.cpp  type.cpp  value.cpp
src/parse/: handparser.cpp  numbatparser.cpp  parser.cpp  stack.cpp  tree.cpp
src/stackmachine/: instruction.cpp
src/utility/: alphanumeric.cpp  config.cpp  literals.cpp  report.cpp
test/: all.sh  arithmatic.cpp  ast.cpp  correct.nbt  interpreter.sh  interpretertest.cpp  interpretertest.hpp  lexer.cpp  nir.cpp  parser.cpp  parser.sh  parserTest.cpp  regression.nbt  stackmachinetest.cpp  stackmachinetest.hpp  stackmachinetests.cpp  test.cpp  test.hpp  testscript.sh
test/flow_control/: if_else.nbt  while_loop.nbt
test/interpreter/: arithmatic.nbt  arithmatic.nbt.out  variable.nbt  variable.nbt.out
test/numbers/: unsigned.nbt
test/parser/: arithmatic.nbt  arithmatic.nbt.out  arrays.nbt  arrays.nbt.out  basic.nbt  basic.nbt.out  bracket.nbt  bracket.nbt.out  control.nbt  control.nbt.out  import.nbt  import.nbt.out  logic.nbt  logic.nbt.out  slice.nbt  slice.nbt.out
test/system_calls/: open_close.nbt  read.nbt
(+51 files in other folders)
